# SpacetimeDB

./: .gitignore  README.md
my_spacetime_client/: Cargo.toml
my_spacetime_client/src/: client.rs  config.rs  game_features.rs  main.rs
my_spacetime_module/: Cargo.toml
my_spacetime_module/src/: constants.rs  lib.rs  query_utils.rs  rls.rs  schema.rs
my_spacetime_module/src/physics/: contact_tracker.rs  mod.rs  physics_tick.rs  prelude.rs  rapier_common.rs  skills.rs  spawn.rs  tests.rs
my_spacetime_module/src/reducers/: combat.rs  lifecycle.rs  world.rs
my_spacetime_module/src/spacetime_common/: collision.rs  mod.rs  shape.rs  spatial.rs  types.rs
my_spacetime_module/src/tables/: buff_expiry_schedule.rs  chunk_entities.rs  contact_duration.rs  contact_event.rs  damage_event.rs  game_item.rs  map_chunk.rs  physics_body.rs  player.rs  player_buffs.rs  scheduling.rs  skill_cooldown.rs
my_spacetime_module/src/world/: map_manager.rs  mod.rs  request_chunk_subscription.rs  view_updater.rs
spacetime_common/: Cargo.toml  README.md
spacetime_common/src/: collision.rs  lib.rs  types.rs
