[package]
name = "my_spacetime_client"
version = "0.1.0"
edition = "2024"

[dependencies]
spacetimedb-sdk = "1.1.1"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.29.0"  # Better terminal input handling
chrono = "0.4"      # Time formatting and manipulation
rand = "0.9.1"        # Random number generation
phf = { version = "0.11", features = ["macros"] }
